hm2/app-service-conv.yml
apiVersion: v1 
kind: Service 
metadata: 
  name: conv-app-clusterip
spec:
  type: ClusterIP
  ports: 
    - port: 80
      protocol: TCP
  selector:
    components: frontend
